--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="The work of Fomenko Dmitry" />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link rel="shortcut icon" href="./Image/favicon.ico" />
-    <title>CHESS</title>
+    <title>Alexis site by Fomenko Dmitry</title>
 </head>
 
 <body>
