--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <!-- Необходимо доделать/Разобраться-->
             <video muted autoplay="autoplay" poster="./video/move.jpg" style="width:100%; height: 500px;" title="1280"
                 loop="loop">
-                <source src="./video/move111.mp4" type="video/mp4" />
+                <source src="./video/move.mp4" type="video/mp4" />
                 <source src="./video/move.webm" type="video/webm" />
                 <source src="./video/move.ogv" type="video/ogg" />
             </video>
