--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <header>
         <div class="container">
             <a href="#">Alexis</a>
-            <nav>
+            <div class="nav_icon">
+                <div></div>
+            </div>
+            <nav class="menu_panel">
                 <ul>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Our Focus </a></li>
@@ -319,10 +322,8 @@
 
 
 
-
-
-
-    <script src="./js/js.js" async></script>
+    <script type="text/javascript" src="./js/jquery-pack.js"></script>
+    <script type="text/javascript" src="./js/js.js"></script>
 </body>
 
 </html>
