--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="The work of Fomenko Dmitry" />
+    <meta property="og:image" content="https://yandex.by/images/_crpd/hhdda6497/8db529vyEKS/LacQHFvyamt39HSyH5q77bY7NoqAZX4pPXzNaSOs6uo81JYsxj3fFtSsky4PPcR4wEPJ4bgUFZ5tBQZ_e5kT17oxFk8OIepv9uTmYN2IfPqyOo" />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link rel="shortcut icon" href="./Image/favicon.ico" />
     <title>Alexis site by Fomenko Dmitry</title>
