--- a/index.html
+++ b/index.html
@@ -112,12 +112,7 @@
         </section>
         <section class="video-bg">
             <!-- Необходимо доделать/Разобраться-->
-            <video muted autoplay="autoplay" poster="./video/move.jpg" style="width:100%; height: 500px;" title="1280"
-                loop="loop">
-                <source src="./video/move.mp4" type="video/mp4" />
-                <source src="./video/move.webm" type="video/webm" />
-                <source src="./video/move.ogv" type="video/ogg" />
-            </video>
+            <div id="video-container"></div>
         </section>
         <section class="portfolio">
             <div class="container">
