--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="container">
             <a href="#">Alexis</a>
             <div class="nav_icon">
