--- a/Java-dz/index.html
+++ b/Java-dz/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link rel="shortcut icon" href="./Image/favicon.ico" />
     <script src="./js/js.js"></script>
-    <title>FIVE STARS</title>
+    <title>Пару вопросов!</title>
 </head>
 
 <body>
