--- a/Java-dz/anketa_if.html
+++ b/Java-dz/anketa_if.html
@@ -8,7 +8,7 @@
     <meta name="description" content="The work of Fomenko Dmitry" />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link rel="shortcut icon" href="./Image/favicon.ico" />
-    <script src="./js/js1.js"></script>
+    <script src="./js/js.js"></script>
     <title>Пару вопросов!</title>
 </head>
 
