--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <meta name="description" content="The work of Fomenko Dmitry" />
     <meta property="og:image"
         content="https://yandex.by/images/_crpd/hhdda6497/8db529vyEKS/LacQHFvyamt39HSyH5q77bY7NoqAZX4pPXzNaSOs6uo81JYsxj3fFtSsky4PPcR4wEPJ4bgUFZ5tBQZ_e5kT17oxFk8OIepv9uTmYN2IfPqyOo" />
+    <link rel="stylesheet" href="./css/slick.css">
+    <link rel="stylesheet" href="./css/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link rel="shortcut icon" href="./Image/favicon.ico" />
     <title>Alexis site by Fomenko Dmitry</title>
 </head>
 
 <body>
-    
+
     <header class="header">
         <div class="container">
             <a href="#">Alexis</a>
@@ -181,10 +183,6 @@
                     <p>Freebies Released</p>
                     <img src="./Image/stats-releases-bottom.png" alt="">
                 </div>
-
-
-
-
             </div>
         </section>
         <section class="work">
@@ -251,7 +249,7 @@
                         <p> Secure Platform</p>
                         <p> 24/7 Customer Support</p>
                         <p> Fast & Reliable</p>
-                        <a href=""></a>
+                        <a class="pricing-left" href="#">get started</a>
                     </article>
                     <article class="ultimate">
                         <h2>Ultimate</h2>
@@ -265,7 +263,7 @@
                         <p> Secure Platform</p>
                         <p> 24/7 Customer Support</p>
                         <p> Fast & Reliable </p>
-                        <a href=""></a>
+                        <a class="pricing-center" href="#">get started</a>
                     </article>
                     <article class="professional">
                         <h2>Professional</h2>
@@ -279,46 +277,67 @@
                         <p> Secure Platform</p>
                         <p> 24/7 Customer Support</p>
                         <p> Fast & Reliable</p>
-                        <a href=""></a>
+                        <a class="pricing-right" href="#">get started</a>
                     </article>
-
                 </div>
-
-
-
-
-
-
             </div>
         </section>
-        <section class="testimonials"></section>
+        <section class="testimonials">
+            <div class="container">
+                <img src="./Image/07.png" alt="">
+                <h2>Testimonials.</h2>
+                <p>We understand your requirement and provide quality works.</p>
+                <div class="slider">
+                    <div class="testimonials-slider">
+                        <div class="slide-promo">
+                            <img src="./Image/testimonials-384x399.png" alt="">
+                            <div class="slide-promo-box">
+                                <img src="./Image/testimonials-xx.png" alt="">
+                                <div>
+                                    <p>Deployment ownership non-disclosure agreement vesting period crowdfunding
+                                        success influencer partnership equity series A financing network effects user
+                                        experience crowdsource. Burn rate stock bootstrapping direct mailing release
+                                        client
+                                        traction creative facebook monetization crowdfunding rockstar.</p>
+                                    <p class="signature">Melina</p>
+                                    <h3>Melina Albrecht</h3>
+                                    <h4>Founder, TingTong</h4>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide-promo">
+                            <img src="./Image/testimonials-384x399.png" alt="">
+                            <div class="slide-promo-box">
+                                <img src="./Image/testimonials-xx.png" alt="">
+                                <div>
+                                    <p>Deployment ownership non-disclosure agreement vesting period crowdfunding
+                                        success influencer partnership equity series A financing network effects user
+                                        experience crowdsource. Burn rate stock bootstrapping direct mailing release
+                                        client
+                                        traction creative facebook monetization crowdfunding rockstar.</p>
+                                    <p class="signature">Melina</p>
+                                    <h3>Melina Albrecht</h3>
+                                    <h4>Founder, TingTong</h4>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
         <section class="select"></section>
         <section class="blog"></section>
         <section class="subscription"></section>
         <section class="contact"></section>
     </main>
     <footer></footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script type="text/javascript" src="./js/jquery-pack.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" async></script>
+    <script src="./js/slick.min.js" async></script>
+    <script src="./js/slick.js" async></script>
+    <script src="./js/main.js" async></script>
     <script type="text/javascript" src="./js/js.js"></script>
 </body>
 
