--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </header>
     <main>
-        <section class="home">
+        <section class="home mobile-screan">
             <div class="container">
                 <h2>We design things with love and passion.</h2>
                 <a href="#">Our Works</a>
@@ -59,7 +59,7 @@
                 </div>
             </div>
         </section>
-        <section class="about">
+        <section class="about mobile-screan">
             <div class="container">
                 <img src="./Image/image3.png" alt="">
                 <div>
@@ -76,7 +76,7 @@
                 </div>
             </div>
         </section>
-        <section class="services">
+        <section class="services mobile-screan">
             <div class="container">
                 <img src="./Image/02.png" alt="">
                 <h2>Our Focus.</h2>
@@ -117,7 +117,7 @@
             <div class="container">
             </div>
         </section>
-        <section class="team">
+        <section class="team mobile-screan">
             <div class="container">
                 <img src="./Image/04.png" alt="">
                 <h2>Our Team.</h2>
@@ -146,7 +146,7 @@
                 </div>
             </div>
         </section>
-        <section class="stats">
+        <section class="stats mobile-screan">
             <div class="container">
                 <div>
                     <img src="./Image/stats-completed.png" alt="">
