--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </section>
         <section class="team" id="team">
             <div class="container">
-                <img src="./Image/04.png" alt="">
+                <img src="./Image/03.png" alt="">
                 <h2>Our Team.</h2>
                 <p>We understand your requirement and provide quality works.</p>
                 <div class="team-articles">
@@ -175,7 +175,7 @@
         </section>
         <section class="work" id="work">
             <div class="container">
-                <img src="./Image/05.png" alt="">
+                <img src="./Image/04.png" alt="">
                 <span class="work-bg-1"></span>
                 <span class="work-bg-2"></span>
                 <span class="work-bg-3"></span>
@@ -220,7 +220,7 @@
         </section>
         <section class="pricing" id="pricing">
             <div class="container">
-                <img src="./Image/06.png" alt="">
+                <img src="./Image/05.png" alt="">
                 <h2>Pricing Table.</h2>
                 <p>We understand your requirement and provide quality works.</p>
                 <div class="pricing-elements">
@@ -271,7 +271,7 @@
         </section>
         <section class="testimonials" id="testimonials">
             <div class="container">
-                <img src="./Image/07.png" alt="">
+                <img src="./Image/06.png" alt="">
                 <h2>Testimonials.</h2>
                 <p>We understand your requirement and provide quality works.</p>
                 <div class="slider">
@@ -315,7 +315,7 @@
         </section>
         <section class="select">
             <div class="container">
-                <img src="./Image/08.png" alt="">
+                <img src="./Image/07.png" alt="">
                 <h2>Why Select Us?</h2>
                 <p>We understand your requirement and provide quality works.</p>
                 <section class="select-grid">
@@ -369,7 +369,7 @@
         </section>
         <section class="blog" id="blog">
             <div class="container">
-                <img src="./Image/09.png" alt="">
+                <img src="./Image/08.png" alt="">
                 <h2>Our Blog.</h2>
                 <p>We understand your requirement and provide quality works.</p>
                 <section class="blog-grid">
@@ -411,10 +411,10 @@
         </section>
         <section class="contact" id="contact">
             <div class="container">
-                <img src="./Image/10.png" alt="">
+                <img src="./Image/09.png" alt="">
                 <h2>Get in Touch.</h2>
                 <p>We understand your requirement and provide quality works.</p>
-                <form action="form.php" method="POST">
+                <form method="POST" action="//formspree.io/shaiyaby@yandex.by">
                     <div class="sector-one">
                         <input type="text" name="name" placeholder="Your Name" required>
                         <input type="text" name="Email" placeholder="Your Email" required>
