--- a/index.html
+++ b/index.html
@@ -112,10 +112,6 @@
             <!-- Необходимо доделать/Разобраться-->
             <div id="video-container"></div>
         </section>
-        <section class="portfolio" id="portfolio">
-            <div class="container">
-            </div>
-        </section>
         <section class="team" id="team">
             <div class="container">
                 <img src="./Image/03.png" alt="">
@@ -230,12 +226,12 @@
                             <h2>$125</h2>
                             <p>Per Month</p>
                         </div>
-                        <p>200GB Online Storage</p>
-                        <p>20 Files Per Day</p>
-                        <p>2TB Monthly Bandwidth</p>
-                        <p> Secure Platform</p>
-                        <p> 24/7 Customer Support</p>
-                        <p> Fast & Reliable</p>
+                        <p>200GB</strong>  Online Storage</p>
+                        <p><strong>20</strong> Files Per Day</p>
+                        <p><strong>2TB</strong> Monthly Bandwidth</p>
+                        <p><img src="./Image/ok.png" alt=""> Secure Platform</p>
+                        <p><img src="./Image/ok.png" alt=""> 24/7 Customer Support</p>
+                        <p><img src="./Image/ok.png" alt=""> Fast & Reliable</p>
                         <a class="pricing-left" href="#">get started</a>
                     </article>
                     <article class="ultimate">
@@ -244,12 +240,12 @@
                             <h2>$125</h2>
                             <p>Per Month</p>
                         </div>
-                        <p>800GB Online Storage</p>
-                        <p>Unlimited Files Per Day</p>
-                        <p>10TB Monthly Bandwidth</p>
-                        <p> Secure Platform</p>
-                        <p> 24/7 Customer Support</p>
-                        <p> Fast & Reliable </p>
+                        <p><strong>800GB</strong> Online Storage</p>
+                        <p><strong>Unlimited</strong> Files Per Day</p>
+                        <p><strong>10TB</strong> Monthly Bandwidth</p>
+                        <p><img src="./Image/ok.png" alt=""> Secure Platform</p>
+                        <p><img src="./Image/ok.png" alt=""> 24/7 Customer Support</p>
+                        <p><img src="./Image/ok.png" alt=""> Fast & Reliable </p>
                         <a class="pricing-center" href="#">get started</a>
                     </article>
                     <article class="professional">
@@ -258,12 +254,12 @@
                             <h2>$125</h2>
                             <p>Per Month</p>
                         </div>
-                        <p>200GB Online Storage</p>
-                        <p>20 Files Per Day</p>
-                        <p>2TB Monthly Bandwidth</p>
-                        <p> Secure Platform</p>
-                        <p> 24/7 Customer Support</p>
-                        <p> Fast & Reliable</p>
+                        <p><strong>200GB</strong>  Online Storage</p>
+                        <p><strong>20</strong> Files Per Day</p>
+                        <p><strong>2TB</strong> Monthly Bandwidth</p>
+                        <p><img src="./Image/ok.png" alt=""> Secure Platform</p>
+                        <p><img src="./Image/ok.png" alt=""> 24/7 Customer Support</p>
+                        <p><img src="./Image/ok.png" alt=""> Fast & Reliable</p>
                         <a class="pricing-right" href="#">get started</a>
                     </article>
                 </div>
