--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
             <div class="container">
                 <span class="image-about"></span>
                 <div>
-                    <img src="./Image/01.png" alt="">
+                    <!-- <img src="./Image/01.png" alt=""> -->
+                    <p class="number-block">01</p>
                     <h2>About Us.</h2>
                     <p>Analytics release series A financing launch party interaction design android angel investor.
                         Vesting period social media sales conversion launch party rockstar incubator customer social
@@ -77,7 +78,7 @@
         </section>
         <section class="services" id="focus">
             <div class="container">
-                <img src="./Image/02.png" alt="">
+                    <p class="number-block">02</p>
                 <h2>Our Focus.</h2>
                 <p>We understand your requirement and provide quality works.</p>
                 <div class="services-articles">
@@ -114,7 +115,7 @@
         </section>
         <section class="team" id="team">
             <div class="container">
-                <img src="./Image/03.png" alt="">
+                    <p class="number-block">03</p>
                 <h2>Our Team.</h2>
                 <p>We understand your requirement and provide quality works.</p>
                 <div class="team-articles">
@@ -147,31 +148,31 @@
                     <img src="./Image/stats-completed.png" alt="">
                     <h2>12,458+</h2>
                     <p>Projects Completed</p>
-                    <img src="./Image/stats-completed-bottom.png" alt="">
+                    <span class="stats-bals-left"></span>
                 </div>
                 <div>
                     <img src="./Image/stats-clients.png" alt="">
                     <h2>1,796+</h2>
                     <p>Satisfied Clients</p>
-                    <img src="./Image/stats-clients-bottom.png" alt="">
+                    <span class="stats-bals-center-left"></span>
                 </div>
                 <div>
                     <img src="./Image/stats-feedbacks.png" alt="">
                     <h2>1,000+</h2>
                     <p>Positive Feedbacks</p>
-                    <img src="./Image/stats-feedbacks-bottom.png" alt="">
+                    <span class="stats-bals-center-right"></span>
                 </div>
                 <div>
                     <img src="./Image/stats-releases.png" alt="">
                     <h2>1,500+</h2>
                     <p>Freebies Released</p>
-                    <img src="./Image/stats-releases-bottom.png" alt="">
+                    <span class="stats-bals-right"></span>
                 </div>
             </div>
         </section>
         <section class="work" id="work">
             <div class="container">
-                <img src="./Image/04.png" alt="">
+                    <p class="number-block">04</p>
                 <span class="work-bg-1"></span>
                 <span class="work-bg-2"></span>
                 <span class="work-bg-3"></span>
@@ -215,8 +216,8 @@
             </div>
         </section>
         <section class="pricing" id="pricing">
-            <div class="container">
-                <img src="./Image/05.png" alt="">
+            <div class="container"> 
+                <p class="number-block">05</p>
                 <h2>Pricing Table.</h2>
                 <p>We understand your requirement and provide quality works.</p>
                 <div class="pricing-elements">
@@ -267,7 +268,7 @@
         </section>
         <section class="testimonials" id="testimonials">
             <div class="container">
-                <img src="./Image/06.png" alt="">
+                    <p class="number-block">06</p>
                 <h2>Testimonials.</h2>
                 <p>We understand your requirement and provide quality works.</p>
                 <div class="slider">
@@ -311,48 +312,43 @@
         </section>
         <section class="select">
             <div class="container">
-                <img src="./Image/07.png" alt="">
+                    <p class="number-block">07</p>
                 <h2>Why Select Us?</h2>
                 <p>We understand your requirement and provide quality works.</p>
                 <section class="select-grid">
                     <div>
                         <img src="./Image/pricing-1.png" alt="">
-                        <h3>Business <br> Growth</h3>
+                        <h3>Business Growth</h3>
                         <p>Success scrum project funding marketing seed money prototype innovator direct hackathon
                             android angel investor.</p>
                     </div>
                     <div>
                         <img src="./Image/pricing-2.png" alt="">
-                        <h3>Unlimited <br>
-                            Revisions</h3>
+                        <h3>Unlimited Revisions</h3>
                         <p>Technology founders churn rate niche market long tail release iteration burn rate backing.
                             Churn rate accelerator.</p>
                     </div>
                     <div>
                         <img src="./Image/pricing-3.png" alt="">
-                        <h3>Ultimate <br>
-                            Perfection</h3>
+                        <h3>Ultimate Perfection</h3>
                         <p>Deployment ownership non-disclosure agreement vesting period crowdfunding success influencer
                             partnership.</p>
                     </div>
                     <div>
                         <img src="./Image/pricing-4.png" alt="">
-                        <h3>Smart <br>
-                            Experience</h3>
+                        <h3>Smart Experience</h3>
                         <p>Success scrum project funding marketing seed money prototype innovator direct hackathon
                             android angel investor.</p>
                     </div>
                     <div>
                         <img src="./Image/pricing-5.png" alt="">
-                        <h3>Strict <br>
-                            Deadline</h3>
+                        <h3>Strict Deadline</h3>
                         <p>Technology founders churn rate niche market long tail release iteration burn rate backing.
                             Churn rate accelerator.</p>
                     </div>
                     <div>
                         <img src="./Image/pricing-6.png" alt="">
-                        <h3>Award-winning <br>
-                            Company</h3>
+                        <h3>Award-winning Company</h3>
                         <p>Deployment ownership non-disclosure agreement vesting period crowdfunding success influencer
                             partnership.</p>
                     </div>
@@ -365,7 +361,7 @@
         </section>
         <section class="blog" id="blog">
             <div class="container">
-                <img src="./Image/08.png" alt="">
+                    <p class="number-block">08</p>
                 <h2>Our Blog.</h2>
                 <p>We understand your requirement and provide quality works.</p>
                 <section class="blog-grid">
