--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
         </section>
         <section class="contact" id="contact">
             <div class="container">
-                <img src="./Image/09.png" alt="">
+                    <p class="number-block">09</p>
                 <h2>Get in Touch.</h2>
                 <p>We understand your requirement and provide quality works.</p>
                 <form method="POST" action="//formspree.io/shaiyaby@yandex.by">
@@ -450,7 +450,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" async></script>
     <script src="./js/slick.min.js" async></script>
     <script src="./js/slick.js" async></script>
-    <script src="./js/main.js" async></script>
     <script type="text/javascript" src="./js/js.js"></script>
 </body>
 
