--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -43,18 +43,18 @@
                 <h2>We design things with love and passion.</h2>
                 <a href="#work">Our Works</a>
                 <div>
-                    <span>
+                    <article>
                         <img src="./Image/home-dollar.png" alt="">
                         <p class="home-block-left">Fixed price projects</p>
-                    </span>
-                    <span>
+                    </article>
+                    <article>
                         <img src="./Image/home-time.png" alt="">
                         <p class="home-block-center">Receive on time</p>
-                    </span>
-                    <span>
+                    </article>
+                    <article>
                         <img src="./Image/home-ok.png" alt="">
                         <p class="home-block-right">Satisfaction guranteed</p>
-                    </span>
+                    </article>
                 </div>
             </div>
         </section>
@@ -78,7 +78,7 @@
         </section>
         <section class="services" id="focus">
             <div class="container">
-                    <p class="number-block">02</p>
+                <p class="number-block">02</p>
                 <h2>Our Focus.</h2>
                 <p>We understand your requirement and provide quality works.</p>
                 <div class="services-articles">
@@ -110,12 +110,11 @@
             </div>
         </section>
         <section class="video-bg">
-            <!-- Необходимо доделать/Разобраться-->
             <div id="video-container"></div>
         </section>
         <section class="team" id="team">
             <div class="container">
-                    <p class="number-block">03</p>
+                <p class="number-block">03</p>
                 <h2>Our Team.</h2>
                 <p>We understand your requirement and provide quality works.</p>
                 <div class="team-articles">
@@ -172,7 +171,7 @@
         </section>
         <section class="work" id="work">
             <div class="container">
-                    <p class="number-block">04</p>
+                <p class="number-block">04</p>
                 <span class="work-bg-1"></span>
                 <span class="work-bg-2"></span>
                 <span class="work-bg-3"></span>
@@ -216,7 +215,7 @@
             </div>
         </section>
         <section class="pricing" id="pricing">
-            <div class="container"> 
+            <div class="container">
                 <p class="number-block">05</p>
                 <h2>Pricing Table.</h2>
                 <p>We understand your requirement and provide quality works.</p>
@@ -227,7 +226,7 @@
                             <h2>$125</h2>
                             <p>Per Month</p>
                         </div>
-                        <p>200GB</strong>  Online Storage</p>
+                        <p><strong>200GB</strong> Online Storage</p>
                         <p><strong>20</strong> Files Per Day</p>
                         <p><strong>2TB</strong> Monthly Bandwidth</p>
                         <p><img src="./Image/ok.png" alt=""> Secure Platform</p>
@@ -255,7 +254,7 @@
                             <h2>$125</h2>
                             <p>Per Month</p>
                         </div>
-                        <p><strong>200GB</strong>  Online Storage</p>
+                        <p><strong>200GB</strong> Online Storage</p>
                         <p><strong>20</strong> Files Per Day</p>
                         <p><strong>2TB</strong> Monthly Bandwidth</p>
                         <p><img src="./Image/ok.png" alt=""> Secure Platform</p>
@@ -268,7 +267,7 @@
         </section>
         <section class="testimonials" id="testimonials">
             <div class="container">
-                    <p class="number-block">06</p>
+                <p class="number-block">06</p>
                 <h2>Testimonials.</h2>
                 <p>We understand your requirement and provide quality works.</p>
                 <div class="slider">
@@ -308,11 +307,10 @@
                     </div>
                 </div>
             </div>
-            </div>
         </section>
         <section class="select">
             <div class="container">
-                    <p class="number-block">07</p>
+                <p class="number-block">07</p>
                 <h2>Why Select Us?</h2>
                 <p>We understand your requirement and provide quality works.</p>
                 <section class="select-grid">
@@ -353,15 +351,15 @@
                             partnership.</p>
                     </div>
                 </section>
-                <span>
+                <article>
                     <p>Start your journy with us now</p>
                     <a class="pricing-center" href="#">get started</a>
-                </span>
+                </article>
             </div>
         </section>
         <section class="blog" id="blog">
             <div class="container">
-                    <p class="number-block">08</p>
+                <p class="number-block">08</p>
                 <h2>Our Blog.</h2>
                 <p>We understand your requirement and provide quality works.</p>
                 <section class="blog-grid">
@@ -403,7 +401,7 @@
         </section>
         <section class="contact" id="contact">
             <div class="container">
-                    <p class="number-block">09</p>
+                <p class="number-block">09</p>
                 <h2>Get in Touch.</h2>
                 <p>We understand your requirement and provide quality works.</p>
                 <form method="POST" action="//formspree.io/shaiyaby@yandex.by">
@@ -446,11 +444,11 @@
             </div>
         </div>
     </footer>
-    <script type="text/javascript" src="./js/jquery-pack.js"></script>
+    <script src="./js/jquery-pack.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" async></script>
     <script src="./js/slick.min.js" async></script>
     <script src="./js/slick.js" async></script>
-    <script type="text/javascript" src="./js/js.js"></script>
+    <script src="./js/js.js"></script>
 </body>
 
 </html>
