--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                 <ul>
                     <li><a href="#about">About Us</a></li>
                     <li><a href="#focus">Our Focus </a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#team">Our Team</a></li>
                     <li><a href="#work">Work Steps</a></li>
                     <li><a href="#pricing">Pricing</a></li>
@@ -272,6 +271,38 @@
                 <p>We understand your requirement and provide quality works.</p>
                 <div class="slider">
                     <div class="testimonials-slider">
+                        <div class="slide-promo">
+                            <img src="./Image/testimonials-384x399.png" alt="">
+                            <div class="slide-promo-box">
+                                <img src="./Image/testimonials-xx.png" alt="">
+                                <div>
+                                    <p>Deployment ownership non-disclosure agreement vesting period crowdfunding
+                                        success influencer partnership equity series A financing network effects user
+                                        experience crowdsource. Burn rate stock bootstrapping direct mailing release
+                                        client
+                                        traction creative facebook monetization crowdfunding rockstar.</p>
+                                    <p class="signature">Melina</p>
+                                    <h3>Melina Albrecht</h3>
+                                    <h4>Founder, TingTong</h4>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide-promo">
+                            <img src="./Image/testimonials-384x3991.png" alt="">
+                            <div class="slide-promo-box">
+                                <img src="./Image/testimonials-xx.png" alt="">
+                                <div>
+                                    <p>Deployment ownership non-disclosure agreement vesting period crowdfunding
+                                        success influencer partnership equity series A financing network effects user
+                                        experience crowdsource. Burn rate stock bootstrapping direct mailing release
+                                        client
+                                        traction creative facebook monetization crowdfunding rockstar.</p>
+                                    <p class="signature">Melina</p>
+                                    <h3>Melina Albrecht</h3>
+                                    <h4>Founder, TingTong</h4>
+                                </div>
+                            </div>
+                        </div>
                         <div class="slide-promo">
                             <img src="./Image/testimonials-384x399.png" alt="">
                             <div class="slide-promo-box">
