--- a/index.html
+++ b/index.html
@@ -599,11 +599,11 @@
             </div>
         </div>
     </footer>
-    <script src="./js/jquery-pack.js"></script>
+    <script src="./js/jquery-pack.js" async></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" async></script>
     <script src="./js/slick.min.js" async></script>
     <script src="./js/slick.js" async></script>
-    <script src="./js/js.js"></script>
+    <script src="./js/js.js" async></script>
 </body>
 
 </html>
