--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                 <section class="blog-grid">
                     <div class="blog-full-article">
                         <img src="./Image/blog-img.png" alt="">
-                        <p class="blog-child-name full">Damian Schreiber</p>
+                        <a class="blog-child-name full" href="#">Damian Schreiber</a>
                         <h3>December 10, 2015</h3>
                         <h2>Google Street View adds virtual reality support</h2>
                         <p class="article-0-text">Traction seed money infographic accelerator pivot value proposition
@@ -526,7 +526,7 @@
                                 class="read-all-article-0" href="#">Read Full Article »</a></p>
                     </div>
                     <div class="blog-article blog-article-1">
-                        <p class="blog-child-name">Damian Schreiber</p>
+                        <a class="blog-child-name" href="#">Damian Schreiber</a>
                         <h3>December 10, 2015</h3>
                         <h2>Google Street View adds virtual reality support</h2>
                         <p class="article-0-text">Traction seed money infographic accelerator pivot value proposition
@@ -534,7 +534,7 @@
                                 class="read-all-article-0" href="#">Read Full Article »</a></p>
                     </div>
                     <div class="blog-article blog-article-2">
-                        <p class="blog-child-name">Damian Schreiber</p>
+                        <a class="blog-child-name" href="#">Damian Schreiber</a>
                         <h3>December 10, 2015</h3>
                         <h2>Google Street View adds virtual reality support</h2>
                         <p class="article-0-text">Traction seed money infographic accelerator pivot value proposition
@@ -542,7 +542,7 @@
                                 class="read-all-article-0" href="#">Read Full Article »</a></p>
                     </div>
                     <div class="blog-article blog-article-3">
-                        <p class="blog-child-name">Damian Schreiber</p>
+                        <a class="blog-child-name" href="#">Damian Schreiber</a>
                         <h3>December 10, 2015</h3>
                         <h2>Google Street View adds virtual reality support</h2>
                         <p class="article-0-text">Traction seed money infographic accelerator pivot value proposition
